force-app/main/default/objects/EdFund_Facilites__c/EdFund_Facilites__c.object-meta.xml
<CustomObject>
    <label>EdFund Facilities</label>
    <nameField>
        <label>Facility Name (CCA)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EdFund Facilites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>