force-app/main/default/objects/EdFund_Facilites__c/fields/A_End__c.field-meta.xml
<CustomField>
    <fullName>A_End__c</fullName>
    <label>A:End</label>
    <type>Time</type>
</CustomField>