force-app/main/default/objects/EdFund_Facilites__c/fields/A_Start__c.field-meta.xml
<CustomField>
    <fullName>A_Start__c</fullName>
    <label>A:Start</label>
    <type>Time</type>
</CustomField>