force-app/main/default/objects/EdFund_Facilites__c/fields/Allowed_to_Host_Onsite__c.field-meta.xml
<CustomField>
    <fullName>Allowed_to_Host_Onsite__c</fullName>
    <label>Allowed to Host Onsite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>