force-app/main/default/objects/EdFund_Facilites__c/fields/Allowed_to_Invite_Other_Facilities__c.field-meta.xml
<CustomField>
    <fullName>Allowed_to_Invite_Other_Facilities__c</fullName>
    <label>Allowed to Invite Other Facilities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>