force-app/main/default/objects/EdFund_Facilites__c/fields/B_End__c.field-meta.xml
<CustomField>
    <fullName>B_End__c</fullName>
    <label>B:End</label>
    <type>Time</type>
</CustomField>