force-app/main/default/objects/EdFund_Facilites__c/fields/B_Start__c.field-meta.xml
<CustomField>
    <fullName>B_Start__c</fullName>
    <label>B:Start</label>
    <type>Time</type>
</CustomField>