force-app/main/default/objects/EdFund_Facilites__c/fields/C_End__c.field-meta.xml
<CustomField>
    <fullName>C_End__c</fullName>
    <label>C:End</label>
    <type>Time</type>
</CustomField>