force-app/main/default/objects/EdFund_Facilites__c/fields/C_N_A_job_description_obtained__c.field-meta.xml
<CustomField>
    <fullName>C_N_A_job_description_obtained__c</fullName>
    <description>from employer and uploaded into facility files</description>
    <inlineHelpText>from employer and uploaded into facility files</inlineHelpText>
    <label>C.N.A. job description obtained</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>