force-app/main/default/objects/EdFund_Facilites__c/fields/C_Start__c.field-meta.xml
<CustomField>
    <fullName>C_Start__c</fullName>
    <label>C:Start</label>
    <type>Time</type>
</CustomField>