force-app/main/default/objects/EdFund_Facilites__c/fields/CBA_End_date__c.field-meta.xml
<CustomField>
    <fullName>CBA_End_date__c</fullName>
    <label>CBA End date</label>
    <type>Date</type>
</CustomField>