force-app/main/default/objects/EdFund_Facilites__c/fields/CBA_received_date__c.field-meta.xml
<CustomField>
    <fullName>CBA_received_date__c</fullName>
    <label>CBA received date</label>
    <type>Date</type>
</CustomField>