force-app/main/default/objects/EdFund_Facilites__c/fields/CBA_Start_date__c.field-meta.xml
<CustomField>
    <fullName>CBA_Start_date__c</fullName>
    <label>CBA Start date</label>
    <type>Date</type>
</CustomField>