force-app/main/default/objects/EdFund_Facilites__c/fields/Class_Space_Available__c.field-meta.xml
<CustomField>
    <fullName>Class_Space_Available__c</fullName>
    <label>Class Space Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>