force-app/main/default/objects/EdFund_Facilites__c/fields/CNA_Shift_Hours_NOC_End__c.field-meta.xml
<CustomField>
    <fullName>CNA_Shift_Hours_NOC_End__c</fullName>
    <label>CNA Shift Hours (NOC) End</label>
    <type>Time</type>
</CustomField>