force-app/main/default/objects/EdFund_Facilites__c/fields/CNA_Shift_Hours_NOC_Start__c.field-meta.xml
<CustomField>
    <fullName>CNA_Shift_Hours_NOC_Start__c</fullName>
    <label>CNA Shift Hours (NOC) Start</label>
    <type>Time</type>
</CustomField>