force-app/main/default/objects/EdFund_Facilites__c/fields/Contribution_Early_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Early_End_Date__c</fullName>
    <label>Contribution Early End Date</label>
    <type>Date</type>
</CustomField>