force-app/main/default/objects/EdFund_Facilites__c/fields/Contribution_Recovery_Limitation_60_or__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Recovery_Limitation_60_or__c</fullName>
    <label>Contribution Recovery Limitation 60/120</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>