force-app/main/default/objects/EdFund_Facilites__c/fields/Contribution_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Start_date__c</fullName>
    <label>Contribution Start date</label>
    <type>Date</type>
</CustomField>