force-app/main/default/objects/EdFund_Facilites__c/fields/Contributions__c.field-meta.xml
<CustomField>
    <fullName>Contributions__c</fullName>
    <label>Contributions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>