force-app/main/default/objects/EdFund_Facilites__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alameda County</fullName>
            </value>
            <value>
                <fullName>Alpine County</fullName>
            </value>
            <value>
                <fullName>Amador County</fullName>
            </value>
            <value>
                <fullName>Butte County</fullName>
            </value>
            <value>
                <fullName>Calaveras County</fullName>
            </value>
            <value>
                <fullName>Colusa County</fullName>
            </value>
            <value>
                <fullName>Contra Costa County</fullName>
            </value>
            <value>
                <fullName>Del Norte County</fullName>
            </value>
            <value>
                <fullName>El Dorado County</fullName>
            </value>
            <value>
                <fullName>Fresno County</fullName>
            </value>
            <value>
                <fullName>Glenn County</fullName>
            </value>
            <value>
                <fullName>Humboldt County</fullName>
            </value>
            <value>
                <fullName>Imperial County</fullName>
            </value>
            <value>
                <fullName>Inyo County</fullName>
            </value>
            <value>
                <fullName>Kern County</fullName>
            </value>
            <value>
                <fullName>Kings County</fullName>
            </value>
            <value>
                <fullName>Lake County</fullName>
            </value>
            <value>
                <fullName>Lassen County</fullName>
            </value>
            <value>
                <fullName>Los Angeles County</fullName>
            </value>
            <value>
                <fullName>Madera County</fullName>
            </value>
            <value>
                <fullName>Marin County</fullName>
            </value>
            <value>
                <fullName>Mariposa County</fullName>
            </value>
            <value>
                <fullName>Mendocino County</fullName>
            </value>
            <value>
                <fullName>Merced County</fullName>
            </value>
            <value>
                <fullName>Modoc County</fullName>
            </value>
            <value>
                <fullName>Mono County</fullName>
            </value>
            <value>
                <fullName>Monterey County</fullName>
            </value>
            <value>
                <fullName>Napa County</fullName>
            </value>
            <value>
                <fullName>Nevada County</fullName>
            </value>
            <value>
                <fullName>Orange County</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>