force-app/main/default/objects/EdFund_Facilites__c/fields/County_Auto__c.field-meta.xml
<CustomField>
    <fullName>County_Auto__c</fullName>
    <label>County (Auto)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>