force-app/main/default/objects/EdFund_Facilites__c/fields/CSEContribution_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CSEContribution_End_Date__c</fullName>
    <label>Contribution End Date</label>
    <type>Date</type>
</CustomField>