force-app/main/default/objects/EdFund_Facilites__c/fields/D_End__c.field-meta.xml
<CustomField>
    <fullName>D_End__c</fullName>
    <label>D:End</label>
    <type>Time</type>
</CustomField>