force-app/main/default/objects/EdFund_Facilites__c/fields/D_Start__c.field-meta.xml
<CustomField>
    <fullName>D_Start__c</fullName>
    <label>D:Start</label>
    <type>Time</type>
</CustomField>