force-app/main/default/objects/EdFund_Facilites__c/fields/Day_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Month__c</fullName>
    <label>Day of Month</label>
    <length>30</length>
    <type>Text</type>
</CustomField>