force-app/main/default/objects/EdFund_Facilites__c/fields/Employer_Form_received_date__c.field-meta.xml
<CustomField>
    <fullName>Employer_Form_received_date__c</fullName>
    <label>Employer Form received date</label>
    <type>Date</type>
</CustomField>