force-app/main/default/objects/EdFund_Facilites__c/fields/Facility_California_Employer_Account_Num__c.field-meta.xml
<CustomField>
    <fullName>Facility_California_Employer_Account_Num__c</fullName>
    <description>Facility California Employer Account Number (CEAN)</description>
    <label>Facility California Employer Account Num</label>
    <length>100</length>
    <type>Text</type>
</CustomField>