force-app/main/default/objects/EdFund_Facilites__c/fields/Facility_Created_On__c.field-meta.xml
<CustomField>
    <fullName>Facility_Created_On__c</fullName>
    <label>Facility Created On</label>
    <type>Date</type>
</CustomField>