force-app/main/default/objects/EdFund_Facilites__c/fields/Facility_Employer_Ownerr__c.field-meta.xml
<CustomField>
    <fullName>Facility_Employer_Ownerr__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Employer/Owner</label>
    <referenceTo>EdFund_Partner__c</referenceTo>
    <relationshipLabel>EdFund Facilites</relationshipLabel>
    <relationshipName>EdFund_Facilites</relationshipName>
    <type>Lookup</type>
</CustomField>