force-app/main/default/objects/EdFund_Facilites__c/fields/Facility_ID_Local_2015__c.field-meta.xml
<CustomField>
    <fullName>Facility_ID_Local_2015__c</fullName>
    <label>Facility ID (Local 2015)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>