force-app/main/default/objects/EdFund_Facilites__c/fields/Facility_ID_Mariposa_Training__c.field-meta.xml
<CustomField>
    <fullName>Facility_ID_Mariposa_Training__c</fullName>
    <label>Facility ID (Mariposa Training)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>