force-app/main/default/objects/EdFund_Facilites__c/fields/Facility_is_Voucher_Program_Participant__c.field-meta.xml
<CustomField>
    <fullName>Facility_is_Voucher_Program_Participant__c</fullName>
    <label>Facility is Voucher Program Participant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>