force-app/main/default/objects/EdFund_Facilites__c/fields/Facility_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Facility_Member_Count__c</fullName>
    <label>Facility Member Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>