force-app/main/default/objects/EdFund_Facilites__c/fields/Facility_Name_DELTA__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name_DELTA__c</fullName>
    <label>Facility Name (DELTA)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>