force-app/main/default/objects/EdFund_Facilites__c/fields/Facility_Name_Local_2015__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name_Local_2015__c</fullName>
    <label>Facility Name (Local 2015)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>