force-app/main/default/objects/EdFund_Facilites__c/fields/Facility_Name_Website__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name_Website__c</fullName>
    <label>Facility Name (Website)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>