force-app/main/default/objects/EdFund_Facilites__c/fields/Facility_Online_Training__c.field-meta.xml
<CustomField>
    <fullName>Facility_Online_Training__c</fullName>
    <label>Facility Online Training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MediLine University (ID: 2)</fullName>
            </value>
            <value>
                <fullName>Other (ID: 3)</fullName>
            </value>
            <value>
                <fullName>Relias (ID: 1)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>