force-app/main/default/objects/EdFund_Facilites__c/fields/Facility_Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Ownership_Type__c</fullName>
    <label>Facility Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>For Profit - Corporation (ID: 2)</fullName>
            </value>
            <value>
                <fullName>Non Profit - Corporation (ID: 1)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>