force-app/main/default/objects/EdFund_Facilites__c/fields/Facility_Partner_Online_CEU__c.field-meta.xml
<CustomField>
    <fullName>Facility_Partner_Online_CEU__c</fullName>
    <label>Facility Partner (Online CEU)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CNAZone (ID: 1)</fullName>
            </value>
            <value>
                <fullName>Mariposa Training (ID: 2)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>