force-app/main/default/objects/EdFund_Facilites__c/fields/Facility_Region_Union_Local_2015__c.field-meta.xml
<CustomField>
    <fullName>Facility_Region_Union_Local_2015__c</fullName>
    <label>Facility Region (Union | Local 2015)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Region 1</fullName>
            </value>
            <value>
                <fullName>Region 2</fullName>
            </value>
            <value>
                <fullName>Region 3</fullName>
            </value>
            <value>
                <fullName>Region 4</fullName>
            </value>
            <value>
                <fullName>Region 5</fullName>
            </value>
            <value>
                <fullName>Region 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>