force-app/main/default/objects/EdFund_Facilites__c/fields/Facility_Regional_Senior_Organizer__c.field-meta.xml
<CustomField>
    <fullName>Facility_Regional_Senior_Organizer__c</fullName>
    <label>Facility Regional Senior Organizer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Katiana Adorno Rodriguez</fullName>
            </value>
            <value>
                <fullName>Education Fund Assistant</fullName>
            </value>
            <value>
                <fullName>Operations Assistant</fullName>
            </value>
            <value>
                <fullName>Jasmine Basulto</fullName>
            </value>
            <value>
                <fullName>Ernesto Castillo</fullName>
            </value>
            <value>
                <fullName>Danielle Eisenstaedt</fullName>
            </value>
            <value>
                <fullName>Corinne Eldridge</fullName>
            </value>
            <value>
                <fullName>Sonia Escobedo</fullName>
            </value>
            <value>
                <fullName>Leah Harden</fullName>
            </value>
            <value>
                <fullName>Julia Alicia Hernandez</fullName>
            </value>
            <value>
                <fullName>Angelica Hinds</fullName>
            </value>
            <value>
                <fullName>Marianne Lyons</fullName>
            </value>
            <value>
                <fullName>Ashley Mangum</fullName>
            </value>
            <value>
                <fullName>Marlene Tester lv1 Miranda-Saavedra</fullName>
            </value>
            <value>
                <fullName>Marlene Tester lv2 Miranda-Saavedra</fullName>
            </value>
            <value>
                <fullName>Claire Montgomerie</fullName>
            </value>
            <value>
                <fullName>Pia Orense</fullName>
            </value>
            <value>
                <fullName>Syuzanna Petrosyan</fullName>
            </value>
            <value>
                <fullName>Brenda Pineda</fullName>
            </value>
            <value>
                <fullName>Adi Quezada</fullName>
            </value>
            <value>
                <fullName>Sandra Rodriguez</fullName>
            </value>
            <value>
                <fullName>Kenneth-Tester-2 Stollenwerk</fullName>
            </value>
            <value>
                <fullName>Kenneth Stollenwerk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>