force-app/main/default/objects/EdFund_Facilites__c/fields/Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Type__c</fullName>
    <label>Facility Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assisted living facility (ID: 2)</fullName>
            </value>
            <value>
                <fullName>Behavioral/Mental Health Center (Lockdown Facility) (ID: 1)</fullName>
            </value>
            <value>
                <fullName>Nursing Facility (NF) (ID: 6)</fullName>
            </value>
            <value>
                <fullName>Nursing Home  (ID: 4)</fullName>
            </value>
            <value>
                <fullName>Rehabilitation Center (ID: 3)</fullName>
            </value>
            <value>
                <fullName>Skilled Nursing Facility (SNF) (ID: 5)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>