force-app/main/default/objects/EdFund_Facilites__c/fields/Facility_Web_Address__c.field-meta.xml
<CustomField>
    <fullName>Facility_Web_Address__c</fullName>
    <label>Facility Web Address</label>
    <type>Url</type>
</CustomField>