force-app/main/default/objects/EdFund_Facilites__c/fields/FRSM_End__c.field-meta.xml
<CustomField>
    <fullName>FRSM_End__c</fullName>
    <label>FRSM End</label>
    <type>Time</type>
</CustomField>