force-app/main/default/objects/EdFund_Facilites__c/fields/FRSM_Start__c.field-meta.xml
<CustomField>
    <fullName>FRSM_Start__c</fullName>
    <label>FRSM Start</label>
    <type>Time</type>
</CustomField>