force-app/main/default/objects/EdFund_Facilites__c/fields/High_School_Diploma_Required__c.field-meta.xml
<CustomField>
    <fullName>High_School_Diploma_Required__c</fullName>
    <description>by the facility to hire CNAs</description>
    <inlineHelpText>by the facility to hire CNAs</inlineHelpText>
    <label>High School Diploma Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>