force-app/main/default/objects/EdFund_Facilites__c/fields/Job_classification_excluded_from_bargain__c.field-meta.xml
<CustomField>
    <fullName>Job_classification_excluded_from_bargain__c</fullName>
    <description>Job classifications excluded from the bargaining unit</description>
    <label>Job classification excluded from bargain</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounts Receivable Assistants</fullName>
            </value>
            <value>
                <fullName>Activities Assistant</fullName>
            </value>
            <value>
                <fullName>Activities Director</fullName>
            </value>
            <value>
                <fullName>Activity Director</fullName>
            </value>
            <value>
                <fullName>Activity Workers</fullName>
            </value>
            <value>
                <fullName>Administrative Personnel</fullName>
            </value>
            <value>
                <fullName>Administrators</fullName>
            </value>
            <value>
                <fullName>Admissions Clerks</fullName>
            </value>
            <value>
                <fullName>Admissions Employees</fullName>
            </value>
            <value>
                <fullName>Agency Employees</fullName>
            </value>
            <value>
                <fullName>Art Therapist Activity Director</fullName>
            </value>
            <value>
                <fullName>Assistant Administrator</fullName>
            </value>
            <value>
                <fullName>Assistant Director of Nursing</fullName>
            </value>
            <value>
                <fullName>Bookkeeper</fullName>
            </value>
            <value>
                <fullName>Business Office Clerical</fullName>
            </value>
            <value>
                <fullName>Business Office Clerical Employees</fullName>
            </value>
            <value>
                <fullName>Business Office Employees</fullName>
            </value>
            <value>
                <fullName>Business Office Manager</fullName>
            </value>
            <value>
                <fullName>Central Supply</fullName>
            </value>
            <value>
                <fullName>Central Supply Clerk</fullName>
            </value>
            <value>
                <fullName>Central Supply Employees</fullName>
            </value>
            <value>
                <fullName>Charge Registered and Vocational Nurses</fullName>
            </value>
            <value>
                <fullName>Clerical Employees</fullName>
            </value>
            <value>
                <fullName>Clinical Coordinators</fullName>
            </value>
            <value>
                <fullName>Confidential Employees</fullName>
            </value>
            <value>
                <fullName>Cook</fullName>
            </value>
            <value>
                <fullName>Cosmetologist</fullName>
            </value>
            <value>
                <fullName>Data Entry Clerks</fullName>
            </value>
            <value>
                <fullName>Department Managers</fullName>
            </value>
            <value>
                <fullName>Dietary Assistants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>